# app/api/codegen/swagger.json
@@ -723,10 +723,8 @@
           {
             "type": "integer",
             "format": "uint64",
-            "description": " (Required)",
             "name": "gameId",
-            "in": "query",
-            "required": true
+            "in": "query"
           },
           {
             "minimum": 1,
@@ -741,7 +739,7 @@
             "minimum": 20,
             "type": "integer",
             "format": "int64",
-            "description": "分頁筆數 (Minimum: 20, Required)",
+            "description": "分頁筆數 (Required, Minimum: 20)",
             "name": "pageSize",
             "in": "query",
             "required": true
@@ -752,17 +750,37 @@
             "description": "OK",
             "schema": {
               "type": "object",
-              "required": [
-                "pageSize",
-                "totalRecord",
-                "totalPage"
-              ],
               "properties": {
-                "pageSize": {
-                  "description": "分頁筆數",
-                  "type": "integer",
-                  "format": "int64",
-                  "minimum": 20
+                "pagination": {
+                  "description": "分頁",
+                  "type": "object",
+                  "required": [
+                    "pageSize",
+                    "totalRecord",
+                    "totalPage"
+                  ],
+                  "properties": {
+                    "pageSize": {
+                      "description": "分頁筆數",
+                      "type": "integer",
+                      "format": "int64",
+                      "minimum": 20
+                    },
+                    "totalPage": {
+                      "description": "總頁數",
+                      "type": "integer",
+                      "nullable": true,
+                      "format": "int64",
+                      "minimum": 0
+                    },
+                    "totalRecord": {
+                      "description": "總筆數",
+                      "type": "integer",
+                      "nullable": true,
+                      "format": "int64",
+                      "minimum": 0
+                    }
+                  }
                 },
                 "records": {
                   "type": "array",
@@ -811,20 +829,104 @@
                       }
                     }
                   }
-                },
-                "totalPage": {
-                  "description": "總頁數",
-                  "type": "integer",
-                  "nullable": true,
-                  "format": "int64",
-                  "minimum": 0
-                },
-                "totalRecord": {
-                  "description": "總筆數",
-                  "type": "integer",
-                  "nullable": true,
-                  "format": "int64",
-                  "minimum": 0
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/ajax/games": {
+      "get": {
+        "description": "Auto-generated API documentation",
+        "tags": [
+          "(*VenueController)"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "required": [
+                "list"
+              ],
+              "properties": {
+                "list": {
+                  "description": "列表",
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "nullable": true,
+                    "required": [
+                      "id",
+                      "gameLogo",
+                      "gameCode",
+                      "gameName",
+                      "gameType",
+                      "translations"
+                    ],
+                    "properties": {
+                      "gameCode": {
+                        "description": "遊戲ID",
+                        "type": "string",
+                        "maximum": 50,
+                        "minimum": 1
+                      },
+                      "gameLogo": {
+                        "description": "遊戲Logo",
+                        "type": "string",
+                        "maximum": 200,
+                        "minimum": 1
+                      },
+                      "gameName": {
+                        "description": "遊戲名稱",
+                        "type": "string",
+                        "maximum": 50,
+                        "minimum": 1
+                      },
+                      "gameType": {
+                        "description": "遊戲類型",
+                        "type": "integer",
+                        "format": "uint64"
+                      },
+                      "id": {
+                        "description": "SubGameID",
+                        "type": "integer",
+                        "format": "uint64"
+                      },
+                      "translations": {
+                        "description": "語言翻譯",
+                        "type": "array",
+                        "items": {
+                          "type": "object",
+                          "nullable": true,
+                          "required": [
+                            "language"
+                          ],
+                          "properties": {
+                            "gameName": {
+                              "description": "遊戲名稱",
+                              "type": "string",
+                              "maximum": 50,
+                              "minimum": 0
+                            },
+                            "language": {
+                              "description": "語言代碼ex: 'en','ja','ko','ar','es','fr'. Allowed Enum",
+                              "type": "string",
+                              "enum": [
+                                "en",
+                                "ja",
+                                "ko",
+                                "ar",
+                                "es",
+                                "fr"
+                              ]
+                            }
+                          }
+                        }
+                      }
+                    }
+                  }
                 }
               }
             }
@@ -1847,6 +1949,94 @@
         }
       }
     },
+    "GetGamesByFrontedRequest": {
+      "type": "object"
+    },
+    "GetGamesByFrontedResponse": {
+      "type": "object",
+      "required": [
+        "list"
+      ],
+      "properties": {
+        "list": {
+          "description": "列表",
+          "type": "array",
+          "items": {
+            "type": "object",
+            "nullable": true,
+            "required": [
+              "id",
+              "gameLogo",
+              "gameCode",
+              "gameName",
+              "gameType",
+              "translations"
+            ],
+            "properties": {
+              "gameCode": {
+                "description": "遊戲ID",
+                "type": "string",
+                "maximum": 50,
+                "minimum": 1
+              },
+              "gameLogo": {
+                "description": "遊戲Logo",
+                "type": "string",
+                "maximum": 200,
+                "minimum": 1
+              },
+              "gameName": {
+                "description": "遊戲名稱",
+                "type": "string",
+                "maximum": 50,
+                "minimum": 1
+              },
+              "gameType": {
+                "description": "遊戲類型",
+                "type": "integer",
+                "format": "uint64"
+              },
+              "id": {
+                "description": "SubGameID",
+                "type": "integer",
+                "format": "uint64"
+              },
+              "translations": {
+                "description": "語言翻譯",
+                "type": "array",
+                "items": {
+                  "type": "object",
+                  "nullable": true,
+                  "required": [
+                    "language"
+                  ],
+                  "properties": {
+                    "gameName": {
+                      "description": "遊戲名稱",
+                      "type": "string",
+                      "maximum": 50,
+                      "minimum": 0
+                    },
+                    "language": {
+                      "description": "語言代碼ex: 'en','ja','ko','ar','es','fr'. Allowed Enum",
+                      "type": "string",
+                      "enum": [
+                        "en",
+                        "ja",
+                        "ko",
+                        "ar",
+                        "es",
+                        "fr"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "GoldenEggClaimRequest": {
       "type": "object",
       "required": [
@@ -2000,7 +2190,6 @@
       "required": [
         "StartTime",
         "EndTime",
-        "GameId",
         "Page",
         "PageSize"
       ],
@@ -2033,17 +2222,37 @@
     },
     "ListGameTransactionResponse": {
       "type": "object",
-      "required": [
-        "pageSize",
-        "totalRecord",
-        "totalPage"
-      ],
       "properties": {
-        "pageSize": {
-          "description": "分頁筆數",
-          "type": "integer",
-          "format": "int64",
-          "minimum": 20
+        "pagination": {
+          "description": "分頁",
+          "type": "object",
+          "required": [
+            "pageSize",
+            "totalRecord",
+            "totalPage"
+          ],
+          "properties": {
+            "pageSize": {
+              "description": "分頁筆數",
+              "type": "integer",
+              "format": "int64",
+              "minimum": 20
+            },
+            "totalPage": {
+              "description": "總頁數",
+              "type": "integer",
+              "nullable": true,
+              "format": "int64",
+              "minimum": 0
+            },
+            "totalRecord": {
+              "description": "總筆數",
+              "type": "integer",
+              "nullable": true,
+              "format": "int64",
+              "minimum": 0
+            }
+          }
         },
         "records": {
           "type": "array",
@@ -2092,20 +2301,6 @@
               }
             }
           }
-        },
-        "totalPage": {
-          "description": "總頁數",
-          "type": "integer",
-          "nullable": true,
-          "format": "int64",
-          "minimum": 0
-        },
-        "totalRecord": {
-          "description": "總筆數",
-          "type": "integer",
-          "nullable": true,
-          "format": "int64",
-          "minimum": 0
         }
       }
     },
